# vp-builder

./: .gitignore  .shellcheckrc  AUTOMATED-CONVERSION.md  CLAUDE.md  CLUSTERGROUP-INTEGRATION-SUMMARY.md  COMMON-FRAMEWORK-INTEGRATION-PATHS.md  COMMON-FRAMEWORK-STATUS.md  CONVERSION-PROCESS.md  CONVERSION-RULES.md  HELM-ANALYSIS-ENHANCEMENTS.md  Makefile  PATTERN-CONFIGURATION-FEATURE.md  PATTERN-CORRECTIONS.md  PATTERN-TEMPLATES.md  PRODUCT-DETECTION-IMPLEMENTATION.md  PRODUCT-VERSIONS-STATUS.md  README-TOOLS.md  README.md  SCRAPER-README.md  SCRIPT-UPDATES.md  SED-COMPATIBILITY.md  UPDATE-SUMMARY.md  VALIDATED-PATTERN-CONVERTER-ANALYSIS.md  VALIDATED-PATTERN-CONVERTER-PROGRESS-REPORT.md  VALUES-STRUCTURE-FIXES.md  design.md  scrap.py  scrape.py  scraper_requirements.txt  vp-convert
Design/: Analysis.md
claude/: architecture-patterns.md  converter-enhancement-plan.md  makefile-analyzer-evaluation.md  pattern-detection-rules.md  project-transformation-plan.md  validated-patterns-implementation-guide.md  validated-patterns-quick-reference.md  validated-patterns-reference.md  validated-patterns-technical-guide.md  variable-expansion-completion-summary.md  variable-expansion-implementation-summary.md  variable-expansion-improvements.md
scripts/: README.md  convert-to-validated-pattern.py  convert-to-validated-pattern.sh  deploy-models.sh  migrate-charts.sh  test-clustergroup-integration.py  validate-deployment.sh  validate-pattern.sh
scripts/validated-pattern-converter/: .gitignore  MAKEFILE_ANALYSIS_DEMO.md  MIGRATION.md  Makefile  README.md  install.sh  pyproject.toml  requirements.txt
scripts/validated-pattern-converter/docs/: MAKEFILE-ANALYZER-GNU-COMPLIANCE.md  PATTERN-DETECTION-ENHANCEMENTS.md
scripts/validated-pattern-converter/tests/: __init__.py  conftest.py  test_analyzer.py  test_generator.py
scripts/validated-pattern-converter/vpconverter/: __init__.py  analyzer.py  cli.py  config.py  enhanced_analyzer.py  generator.py  makefile_analyzer.py  migrator.py  models.py  pattern_configurator.py  product_detector.py  rules_engine.py  templates.py  utils.py  validator.py  variable_expander.py
